sv.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    konghq.com/protocol: https
    meta.helm.sh/release-name: my-kong
    meta.helm.sh/release-namespace: kong
  creationTimestamp: "2021-11-18T13:08:48Z"
  labels:
    app.kubernetes.io/instance: my-kong
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kong
    app.kubernetes.io/version: "2.6"
    helm.sh/chart: kong-2.6.1
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:konghq.com/protocol: {}
          f:meta.helm.sh/release-name: {}
          f:meta.helm.sh/release-namespace: {}
        f:labels:
          .: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/version: {}
          f:helm.sh/chart: {}
      f:spec:
        f:allocateLoadBalancerNodePorts: {}
        f:externalTrafficPolicy: {}
        f:internalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":8444,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: Go-http-client
    operation: Update
    time: "2021-11-18T13:08:48Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: controller
    operation: Update
    subresource: status
    time: "2021-11-18T13:08:48Z"
  name: my-kong-kong-admin
  namespace: kong
  resourceVersion: "2413"
  uid: e11d5584-9006-47b5-af6d-d2b90a9885d9
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.96.164.120
  clusterIPs:
  - 10.96.164.120
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: kong-admin-tls
    nodePort: 32395
    port: 8444
    protocol: TCP
    targetPort: 8444
  - name: kong-manager
    port: 8445
    protocol: TCP
    targetPort: 8445
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: my-kong
    app.kubernetes.io/name: kong
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 172.21.0.101
